footer and Navigation to the sections through navbar added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/Portfolio/css/styles.css" />
 
     <!--==== BOX ICONS ====-->
-    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link href='https://unpkg.com/boxicons@2.0.8/css/boxicons.min.css' rel='stylesheet'>
 
     <title>Aditya</title>
   </head>
@@ -22,15 +22,11 @@
         </div>
         <div class="nav_menu" id="nav-menu">
           <ul class="nav_list">
-            <li class="nav_item">
-              <a href="#" class="nav_link active">Home</a>
-            </li>
-            <li class="nav_item"><a href="#" class="nav_link">About</a></li>
-            <li class="nav_item"><a href="#" class="nav_link">Skills</a></li>
-            <li class="nav_item">
-              <a href="#" class="nav_link">Experience</a>
-            </li>
-            <li class="nav_item"><a href="#" class="nav_link">Contact</a></li>
+            <li class="nav_item"><a href="#home" class="nav_link active">Home</a></li>
+            <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
+            <li class="nav_item"><a href="#skills" class="nav_link">Skills</a></li>
+            <li class="nav_item"><a href="#work" class="nav_link">Experience</a></li>
+            <li class="nav_item"><a href="#contact" class="nav_link">Contact</a></li>
           </ul>
         </div>
         <div class="nav_toggle" id="nav-toggle">
@@ -197,7 +193,7 @@
 
       </section>
       <!--==== CONTACT ====-->
-      <section class="contact section">
+      <section class="contact section" id="contact">
         <h2 class="section-title">Contact</h2>
         <div class="contact_container bd-grid">
           <form action="" class="contact_form">
@@ -209,9 +205,18 @@
         </div>
       </section>
     </main>
-
     <!--==== FOOTER ====-->
-
+    <footer class="footer">
+      <p class="footer_title"><i class='bx bx-registered' ></i>LunaticGen</p>
+      
+      <div class="footer_social">
+        <a href="" class="footer_icon"><i class='bx bx-linkedin'></i></a>
+        <a href="" class="footer_icon"><i class='bx bx-envelope' ></i></a>
+        <a href="" class="footer_icon"><i class='bx bx-instagram' ></i></a>
+      </div>
+      
+      <p>&#169; 2021 copyright all rights reserved</p>
+    </footer>
     <!--==== SCROLL REVEAL ====-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
