--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="" class="home_social-icon"><i class="bx bx-envelope"></i></a>
         </div>
         <div class="home_img">
-          <img src="/Portfolio/images/p1final.jpg" alt="" width="300" height="300" />
+          <img src="/Portfolio/images/p1final.jpg" alt=""  />
         </div>
       </section>
 
