--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </p>
             <div class="skills_data">
               <div class="skills_names">
-                <i class="bx bxl-html5 skills_icon" style="color: #fdcb6e;"></i>
+                <i class="bx bxl-html5 skills_icon" style="color: #6ea0fd;"></i>
                 <span class="skills_name ">HTML5</span>
               </div>
               <div>
@@ -105,7 +105,7 @@
 
             <div class="skills_data">
               <div class="skills_names">
-                <i class="bx bxl-css3 skills_icon" style="color: #fdcb6e;"></i>
+                <i class="bx bxl-css3 skills_icon" style="color: #6ea0fd;"></i>
                 <span class="skills_name">CSS</span>
               </div>
               <div>
@@ -116,7 +116,7 @@
 
             <div class="skills_data">
               <div class="skills_names">
-                <i class="bx bxl-nodejs skills_icon" style="color: #fdcb6e;"></i>
+                <i class="bx bxl-nodejs skills_icon" style="color: #6ea0fd;"></i>
                 <span class="skills_name">Node</span>
               </div>
               <div>
@@ -127,7 +127,7 @@
 
             <div class="skills_data">
               <div class="skills_names">
-                <i class='bx bxl-kubernetes skills_icon' style="color: #fdcb6e;"></i>
+                <i class='bx bxl-kubernetes skills_icon' style="color: #6ea0fd;"></i>
                 <span class="skills_name">Kubernetes</span>
               </div>
               <div>
@@ -145,7 +145,7 @@
       <section class="work section" id="work">
         <h2 class="section-title">Work</h2>
         <div class="work_container bd-grid">
-          <div class="work-box">
+          <div class="work-box wb1">
             <div class="work-ico">
               <span class="ico-circle">
                 <i class='bx bx-code-alt' style="color: #6ea0fd;"></i>
@@ -156,7 +156,7 @@
               <p>Complete Development of Web Applications as per your need</p>
             </div>
           </div>
-          <div class="work-box">
+          <div class="work-box wb2">
             <div class="work-ico">
               <span class='ico-circle'>
                 <i class='bx bx-cloud' style="color: #6ea0fd;"></i>
@@ -167,7 +167,7 @@
               <p>Deploy, Manage and Compute your resources on any Cloud</p>
             </div>
           </div>
-          <div class="work-box">
+          <div class="work-box wb3">
             <div class="work-ico">
               <span class="ico-circle">
                 <i class='bx bxs-brush' style="color: #6ea0fd;"></i>
@@ -178,7 +178,7 @@
               </div>
             </div>
           </div>
-          <div class="work-box">
+          <div class="work-box wb4">
             <div class="work-ico">
               <span class="ico-circle">
                 <i class='bx bx-line-chart' style="color: #6ea0fd;"></i>
