--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <!--==== BOX ICONS ====-->
     <link href='https://unpkg.com/boxicons@2.0.8/css/boxicons.min.css' rel='stylesheet'>
@@ -51,7 +51,7 @@
           <a href="" class="home_social-icon"><i class="bx bx-envelope"></i></a>
         </div>
         <div class="home_img">
-          <img src="/images/p1final.jpg" alt=""  />
+          <img src="./images/p1final.jpg" alt=""  />
         </div>
       </section>
 
@@ -61,7 +61,7 @@
 
         <div class="about_container bd-grid">
           <div class="about_img">
-            <img src="/images/A Final.gif" alt="" />
+            <img src="./images/A Final.gif" alt="" />
           </div>
           <div>
             <h2 class="about_subtitle">I am Aditya</h2>
@@ -137,7 +137,7 @@
             </div>
           </div>
           <div>
-            <img src="images/imac-pro-setup-100744333-orig-15.jpg" alt="" class="skills_img">
+            <img src="./images/imac-pro-setup-100744333-orig-15.jpg" alt="" class="skills_img">
           </div>
         </div>
       </section>
