--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--==== MAIN JS ====-->
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 
 </html>
